src/main/minigo/parser/.antlr/MParser.py
# Generated from c:/Users/PC/Desktop/PPL/BTL/initial/initial/src/main/minigo/parser/M.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MParser ( Parser ):

    grammarFileName = "M.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'\\n'", "'\\f'", "'\\r'", 
                     "<INVALID>", "<INVALID>", "'if'", "'else'", "'for'", 
                     "'return'", "'func'", "'type'", "'struct'", "'interface'", 
                     "'string'", "'int'", "'float'", "'boolean'", "'const'", 
                     "'var'", "'continue'", "'break'", "'range'", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", 
                     "':='", "'+='", "'-='", "'*='", "'/='", "'%='", "'='", 
                     "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "WS", "NL", "FF", "CR", "COMMENT", "MULTIL_COMMENT", 
                      "IF", "ELSE", "FOR", "RETURN", "FUNC", "TYPE", "STRUCT", 
                      "INTERFACE", "STRING", "INT", "FLOAT", "BOOLEAN", 
                      "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", "ID", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "EQ", "NEQ", "LT", 
                      "LE", "GT", "GE", "AND", "OR", "NOT", "DECL_ASSIGN", 
                      "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "ASSIGN", "DOT", "L_PAREN", "R_PAREN", 
                      "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", "COMMA", 
                      "SEMICOLON", "INT_LIT", "FLOAT_LIT", "STRING_LIT", 
                      "BOOL_LIT", "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_booleanExp = 2
    RULE_intExp = 3
    RULE_floatExp = 4
    RULE_stringExp = 5
    RULE_arrayDecl = 6
    RULE_arrayDimension = 7
    RULE_structDecl = 8
    RULE_structField = 9
    RULE_varDecl = 10
    RULE_typeSpecifiers = 11

    ruleNames =  [ "program", "decl", "booleanExp", "intExp", "floatExp", 
                   "stringExp", "arrayDecl", "arrayDimension", "structDecl", 
                   "structField", "varDecl", "typeSpecifiers" ]

    EOF = Token.EOF
    WS=1
    NL=2
    FF=3
    CR=4
    COMMENT=5
    MULTIL_COMMENT=6
    IF=7
    ELSE=8
    FOR=9
    RETURN=10
    FUNC=11
    TYPE=12
    STRUCT=13
    INTERFACE=14
    STRING=15
    INT=16
    FLOAT=17
    BOOLEAN=18
    CONST=19
    VAR=20
    CONTINUE=21
    BREAK=22
    RANGE=23
    ID=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    EQ=30
    NEQ=31
    LT=32
    LE=33
    GT=34
    GE=35
    AND=36
    OR=37
    NOT=38
    DECL_ASSIGN=39
    ADD_ASSIGN=40
    SUB_ASSIGN=41
    MUL_ASSIGN=42
    DIV_ASSIGN=43
    MOD_ASSIGN=44
    ASSIGN=45
    DOT=46
    L_PAREN=47
    R_PAREN=48
    L_CURLY=49
    R_CURLY=50
    L_BRACKET=51
    R_BRACKET=52
    COMMA=53
    SEMICOLON=54
    INT_LIT=55
    FLOAT_LIT=56
    STRING_LIT=57
    BOOL_LIT=58
    ERROR_CHAR=59
    ILLEGAL_ESCAPE=60
    UNCLOSE_STRING=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MParser.DeclContext)
            else:
                return self.getTypedRuleContext(MParser.DeclContext,i)


        def getRuleIndex(self):
            return MParser.RULE_program




    def program(self):

        localctx = MParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 24
                self.decl()
                self.state = 27 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4611686018427387902) != 0)):
                    break

            self.state = 29
            self.match(MParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MParser.RULE_decl




    def decl(self):

        localctx = MParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.matchWildcard()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL_LIT(self):
            return self.getToken(MParser.BOOL_LIT, 0)

        def NOT(self):
            return self.getToken(MParser.NOT, 0)

        def booleanExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MParser.BooleanExpContext)
            else:
                return self.getTypedRuleContext(MParser.BooleanExpContext,i)


        def AND(self):
            return self.getToken(MParser.AND, 0)

        def OR(self):
            return self.getToken(MParser.OR, 0)

        def getRuleIndex(self):
            return MParser.RULE_booleanExp



    def booleanExp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MParser.BooleanExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_booleanExp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [58]:
                self.state = 34
                self.match(MParser.BOOL_LIT)
                pass
            elif token in [38]:
                self.state = 35
                self.match(MParser.NOT)
                self.state = 36
                self.booleanExp(3)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 47
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 45
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = MParser.BooleanExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExp)
                        self.state = 39
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 40
                        self.match(MParser.AND)
                        self.state = 41
                        self.booleanExp(3)
                        pass

                    elif la_ == 2:
                        localctx = MParser.BooleanExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExp)
                        self.state = 42
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 43
                        self.match(MParser.OR)
                        self.state = 44
                        self.booleanExp(2)
                        pass

             
                self.state = 49
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class IntExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MParser.INT_LIT, 0)

        def intExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MParser.IntExpContext)
            else:
                return self.getTypedRuleContext(MParser.IntExpContext,i)


        def ADD(self):
            return self.getToken(MParser.ADD, 0)

        def SUB(self):
            return self.getToken(MParser.SUB, 0)

        def MUL(self):
            return self.getToken(MParser.MUL, 0)

        def DIV(self):
            return self.getToken(MParser.DIV, 0)

        def MOD(self):
            return self.getToken(MParser.MOD, 0)

        def getRuleIndex(self):
            return MParser.RULE_intExp



    def intExp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MParser.IntExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_intExp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(MParser.INT_LIT)
            self._ctx.stop = self._input.LT(-1)
            self.state = 70
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 68
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = MParser.IntExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_intExp)
                        self.state = 53
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 54
                        self.match(MParser.ADD)
                        self.state = 55
                        self.intExp(6)
                        pass

                    elif la_ == 2:
                        localctx = MParser.IntExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_intExp)
                        self.state = 56
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 57
                        self.match(MParser.SUB)
                        self.state = 58
                        self.intExp(5)
                        pass

                    elif la_ == 3:
                        localctx = MParser.IntExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_intExp)
                        self.state = 59
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 60
                        self.match(MParser.MUL)
                        self.state = 61
                        self.intExp(4)
                        pass

                    elif la_ == 4:
                        localctx = MParser.IntExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_intExp)
                        self.state = 62
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 63
                        self.match(MParser.DIV)
                        self.state = 64
                        self.intExp(3)
                        pass

                    elif la_ == 5:
                        localctx = MParser.IntExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_intExp)
                        self.state = 65
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 66
                        self.match(MParser.MOD)
                        self.state = 67
                        self.intExp(2)
                        pass

             
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FloatExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT_LIT(self):
            return self.getToken(MParser.FLOAT_LIT, 0)

        def floatExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MParser.FloatExpContext)
            else:
                return self.getTypedRuleContext(MParser.FloatExpContext,i)


        def ADD(self):
            return self.getToken(MParser.ADD, 0)

        def SUB(self):
            return self.getToken(MParser.SUB, 0)

        def MUL(self):
            return self.getToken(MParser.MUL, 0)

        def DIV(self):
            return self.getToken(MParser.DIV, 0)

        def getRuleIndex(self):
            return MParser.RULE_floatExp



    def floatExp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MParser.FloatExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_floatExp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(MParser.FLOAT_LIT)
            self._ctx.stop = self._input.LT(-1)
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 88
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = MParser.FloatExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_floatExp)
                        self.state = 76
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 77
                        self.match(MParser.ADD)
                        self.state = 78
                        self.floatExp(5)
                        pass

                    elif la_ == 2:
                        localctx = MParser.FloatExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_floatExp)
                        self.state = 79
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 80
                        self.match(MParser.SUB)
                        self.state = 81
                        self.floatExp(4)
                        pass

                    elif la_ == 3:
                        localctx = MParser.FloatExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_floatExp)
                        self.state = 82
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 83
                        self.match(MParser.MUL)
                        self.state = 84
                        self.floatExp(3)
                        pass

                    elif la_ == 4:
                        localctx = MParser.FloatExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_floatExp)
                        self.state = 85
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 86
                        self.match(MParser.DIV)
                        self.state = 87
                        self.floatExp(2)
                        pass

             
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StringExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LIT(self):
            return self.getToken(MParser.STRING_LIT, 0)

        def stringExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MParser.StringExpContext)
            else:
                return self.getTypedRuleContext(MParser.StringExpContext,i)


        def ADD(self):
            return self.getToken(MParser.ADD, 0)

        def getRuleIndex(self):
            return MParser.RULE_stringExp



    def stringExp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MParser.StringExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_stringExp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(MParser.STRING_LIT)
            self._ctx.stop = self._input.LT(-1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MParser.StringExpContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_stringExp)
                    self.state = 96
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 97
                    self.match(MParser.ADD)
                    self.state = 98
                    self.stringExp(2) 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ArrayDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MParser.VAR, 0)

        def ID(self):
            return self.getToken(MParser.ID, 0)

        def L_BRACKET(self):
            return self.getToken(MParser.L_BRACKET, 0)

        def INT_LIT(self):
            return self.getToken(MParser.INT_LIT, 0)

        def R_BRACKET(self):
            return self.getToken(MParser.R_BRACKET, 0)

        def getRuleIndex(self):
            return MParser.RULE_arrayDecl




    def arrayDecl(self):

        localctx = MParser.ArrayDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MParser.VAR)
            self.state = 105
            self.match(MParser.ID)
            self.state = 106
            self.match(MParser.L_BRACKET)
            self.state = 107
            self.match(MParser.INT_LIT)
            self.state = 108
            self.match(MParser.R_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MParser.RULE_arrayDimension




    def arrayDimension(self):

        localctx = MParser.ArrayDimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrayDimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.matchWildcard()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MParser.TYPE, 0)

        def ID(self):
            return self.getToken(MParser.ID, 0)

        def STRUCT(self):
            return self.getToken(MParser.STRUCT, 0)

        def L_CURLY(self):
            return self.getToken(MParser.L_CURLY, 0)

        def R_CURLY(self):
            return self.getToken(MParser.R_CURLY, 0)

        def structField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MParser.StructFieldContext)
            else:
                return self.getTypedRuleContext(MParser.StructFieldContext,i)


        def getRuleIndex(self):
            return MParser.RULE_structDecl




    def structDecl(self):

        localctx = MParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_structDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(MParser.TYPE)
            self.state = 113
            self.match(MParser.ID)
            self.state = 114
            self.match(MParser.STRUCT)
            self.state = 115
            self.match(MParser.L_CURLY)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 116
                    self.structField() 
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 122
            self.match(MParser.R_CURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MParser.RULE_structField




    def structField(self):

        localctx = MParser.StructFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_structField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.matchWildcard()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MParser.RULE_varDecl




    def varDecl(self):

        localctx = MParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.matchWildcard()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifiersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MParser.RULE_typeSpecifiers




    def typeSpecifiers(self):

        localctx = MParser.TypeSpecifiersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_typeSpecifiers)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.matchWildcard()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.booleanExp_sempred
        self._predicates[3] = self.intExp_sempred
        self._predicates[4] = self.floatExp_sempred
        self._predicates[5] = self.stringExp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def booleanExp_sempred(self, localctx:BooleanExpContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 1)
         

    def intExp_sempred(self, localctx:IntExpContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 1)
         

    def floatExp_sempred(self, localctx:FloatExpContext, predIndex:int):
            if predIndex == 7:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 8:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 9:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 10:
                return self.precpred(self._ctx, 1)
         

    def stringExp_sempred(self, localctx:StringExpContext, predIndex:int):
            if predIndex == 11:
                return self.precpred(self._ctx, 1)
         




